show some basic info prior flying to the conference

--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@ Xiaojun Bian, Li-Yi Wei, Sylvain Lefebvre
 I3D 2018
 </p>
 
-<!--
 <center>
-<img src="./images/representative_image.png" width=80%>
+<img src="./images/tree_and_bird_laser_cut.jpg" width=30%>
 </center>
 
 <h2> Summary </h2>
 
 <blockquote>
+We present a tile-based method that can efficiently synthesize output patterns observing user specified appearance exemplars and topology structures.
+The tile set can be automatically constructed by our analysis algorithm, or manually authored and edited via our user interface.
 </blockquote>
 
 <h2> Available information </h2>
 
 <blockquote>
+
+[<a href="https://youtu.be/lpL4zfCp8Uw">video (youtube)</a>]
+
 </blockquote>
--->
 
 </body>
 </html>
