--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@ The tile set can be automatically constructed by our analysis algorithm, or manu
 
 <blockquote>
 
-<!--
-[<a href="https://hal.inria.fr/hal-01811874">paper</a>]
--->
+[<a href="https://hal.inria.fr/hal-01811874/">paper</a>]
 [<a href="https://youtu.be/lpL4zfCp8Uw">video (youtube)</a>]
 
 </blockquote>
